[tool.poetry]
name = "fuzzpy"
version = "0.1.0"
description = "Fuzzy Inference System in Python"
authors = ["leynier <leynier41@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
fuzzpy = "fuzzpy.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
numpy = "^1.19.4"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
